2006-12-30  Andrey Slusar  <anrays@gmail.com>

	======= Release 5.1.6ds ========================
	------- CVS tag R515 ---------------------------
	* configure.in: Update to 5.1.6ds
	* version.h (PATCHLEVEL): Ditto.
	* src/common/binkley.c:
	* src/common/lock.c:
	* src/include/prototypes.h:
	* src/toss/ftnroute.c:
	Rewrite locking style(patch from Yauheni Kaliuta).
	* doc/FAQ.ru:
	* Changes.ru:
	Update.
	* doc/README.ru:
	* doc/examples/dyff/fidogate.conf.sample.in:
	* doc/examples/point/fidogate.conf.in:
	* doc/examples/snp/fidogate.conf:
	Removed AutoCreateDontCheckPassword.
	* src/common/areasbbs.c (areasbbs_free): xfree() without
	checking.
	* src/toss/ftntoss.c (do_echomail): Change password
	checking in echomail packets - when password is incorrect,
	packet moved to bads, initialise `save'.
	* src/toss/ngoper.c: Add cvs Id.

2006-11-15  Andrey Slusar  <anrays@gmail.com>

	* src/areafix/areafix.c (cmd_sub): Fix potential
	crashes.
	* src/tick/ftntick.c (process_tick): Fix crashes
	(bug, reported by Eugene V. Subbotin)

2006-10-31  Andrey Slusar  <anrays@gmail.com>

	* src/common/msgid.c:
	* src/include/packet.h:
	* src/toss/ftntoss.c:
	name_from, name_to, subject is char types.

2006-10-20  Andrey Slusar  <anrays@gmail.com>

	* src/toss/ftntoss.c: Fix checking NULL entries in areas
	(patch from Yauheni Kaliuta).
	* src/common/areas.c: Correct types for x_a and x_g
	(patch from Yauheny Kaliuta).

2006-10-14  Andrey Slusar  <anrays@gmail.com>

	======= Release 5.1.5ds ========================
	------- CVS tag R515 ---------------------------
	* configure.in: Bump to 5.1.5ds.
	* version.h (PATCHLEVEL): Ditto.

2006-10-13  Andrey Slusar  <anrays@gmail.com>

	* src/common/lock.c: Fix stale locks detecting(patch
	from Zhenya Kaluta, tested by Evgeniy Kozhuhovskiy).
	* src/common/log.c: Comment breaking code(modified
	patch from Zhenya Kaluta, tested by Evgeniy Kozhuhovskiy).
	* src/toss/runinc.c (toss_init): Fix return values.